# prich

./: 404.html  MANIFEST.in  Makefile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  templates_guide.md
.github/workflows/: deploy-docs.yaml  pytest-and-coverage.yaml
badges/: .gitignore  pyproject.toml  pytest-results.xml  templates_guide.md
badges/docs/: index.md
badges/docs/how-to/: install.md
badges/docs/tutorials/: quickstart.md
badges/prich/: constants.py
badges/prich/cli/: init_cmd.py  listing.py  main.py  run.py  template_utils.py  templates.py
badges/prich/core/: engine.py  file_scope.py  loaders.py  optional_imports.py  template_utils.py
badges/prich/llm_providers/: get_llm_provider.py  mlx_local_provider.py  ollama_provider.py
badges/prich/models/: config.py  template.py  template_repo_manifest.py
badges/scripts/: build.py
badges/tests/: test_engine.py  test_init.py  test_listing.py  test_models.py  test_template_install.py  test_validate.py
badges/tests/fixtures/: paths.py  templates.py
docs/: index.md
docs/how-to/: install-templates.md  install.md
docs/reference/: cli.md
docs/reference/config/: provider-modes.md  providers.md
docs/reference/template/: content.md  steps.md  variables.md
how-to/install/: index.html
how-to/install-templates/: index.html
prich/: constants.py  version.py
prich/cli/: config.py  dynamic_command_group.py  init_cmd.py  listing.py  main.py  run.py  template_utils.py  templates.py  validate.py  venv_utils.py
prich/core/: engine.py  file_scope.py  loaders.py  optional_imports.py  state.py  template_utils.py  utils.py  variable_utils.py
prich/core/steps/: step_render_template.py  step_run_command.py  step_send_to_llm.py  step_sent_to_llm.py
prich/llm_providers/: base_optional_provider.py  echo_provider.py  get_llm_provider.py  llm_provider_interface.py  mlx_local_provider.py  ollama_provider.py  openai_provider.py  q_chat_cli_provider.py  stdin_consumer_provider.py
prich/models/: config.py  config_providers.py  file_scope.py  output_shaping.py  template.py  template_repo_manifest.py  text_filter_model.py  utils.py
reference/cli/: index.html
reference/config/provider-modes/: index.html
reference/config/providers/: index.html
reference/config/security/: index.html
reference/config/settings/: index.html
reference/template/content/: index.html
reference/template/steps/: index.html
reference/template/variables/: index.html
search/: search_index.json
templates/code_review/: code_review.yaml
templates/code_review/preprocess/: parse_csv.py
templates/csv_analysis/: README.md  csv_analysis.yaml
templates/csv_analysis/preprocess/: parse_csv.py
tests/: test_dcg_n_main.py  test_engine.py  test_init.py  test_listing.py  test_loaders.py  test_models.py  test_providers.py  test_run_template.py  test_template.py  test_template_install.py  test_template_steps.py  test_validate.py
tests/fixtures/: config.py  paths.py  templates.py
tests/generate/: templates.py
tests/resources/: no_id.yaml  no_name.yaml  no_schema_version.yaml  no_shared_venv.yaml  no_steps.yaml  no_venv.yaml  not_supported_schema.yaml  test_env_vars.txt  wrong_steps.yaml  wrong_variables.yaml  yaml_error.yaml
tests/scripts/: echo_error.sh
tests/utils/: paths.py  utils.py
tutorials/quickstart/: index.html
(+4 files in other folders)
